# wgs

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini
wgscommon/: CMakeLists.txt
wgscommon/include/wgscommon/: types.h  utf8.h  wgs_core.h  wgs_file.h  wgs_file_tokenizer.h  wgs_node.h
wgscommon/src/: utf8.c  wgs_core.c  wgs_file.c  wgs_file_tokenizer.c
wgsecpp/: CMakeLists.txt
wgsecpp/include/: binding.hpp  types.hpp
wgsecpp/src/: wgsecpp.cpp
wgseditor/: CMakeLists.txt
wgseditor/include/: editor.h  font.h  node.h  unit.h  utils.h
wgseditor/res/: test.wgs
wgseditor/src/: editor.cpp  font.cpp  main.cpp  node.cpp  unit.cpp  utils.cpp
wgseruntime/: CMakeLists.txt  todo.txt
wgseruntime/include/: opcodes.h  types.h  vm.h
wgseruntime/src/: vm.c
